features and courses

--- a/index.html
+++ b/index.html
@@ -104,6 +104,100 @@
                 </div>
             </div>
         </div>
+        <!-- features -->
+        <div class="features">
+            <div class="main-content">
+                <div class="body">
+                    <p class="comment">F E A T U R E S</p>
+                    <h2 class="heading lv2">We are providing suitable features for students.</h2>
+                    <p class="desc-main">Read our awesome feature that is absolutely suit for you.
+                         Explore the feature and know the best.</p>
+                    <div class="features-list">
+                        <div class="item">
+                            <div class="frame">
+                                <img src="./assets/icon/Live Class.svg" alt="" class="icon">
+                            </div>
+                            <p class="title">Live Class</p>
+                            <p class="desc">We are providing live classes with the best teacher for you</p>
+                        </div>
+                        <div class="item">
+                            <div class="frame">
+                                <img src="./assets/icon/Discuss.svg" alt="" class="icon">
+                            </div>
+                            <p class="title">Discuss</p>
+                            <p class="desc">Conversation with teachers or another students about task or any other thing</p>
+                        </div>
+                        <div class="item">
+                            <div class="frame">
+                                <img src="./assets/icon/Task.svg" alt="" class="icon">
+                            </div>
+                            <p class="title">Task</p>
+                            <p class="desc">We give every of our students task for gathering knowledge at home</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- courses -->
+        <div class="courses">
+            <div class="main-content">
+                <header>
+                    <p class="comment">C O U R S E S</p>
+                    <h2 class="heading lv2">Popular Courses</h2>
+                    <div class="row">
+                        <p class="desc">Check out our most poular courses that suit for you. Here you can find your favourite one.</p>
+                        <a href="#!" class="link">View All Courses</a>
+                    </div>
+                </header>
+                <div class="list">
+                    <!-- Item1 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img src="./assets/img/courses-1.jpg" alt="" class="thumb">
+                        </a>
+                        <div class="body">
+                            <h3 class="title line-clamp"><a href="#!">Web Design</a></h3>
+                            <p class="price">Fee <strong>$200</strong></p>
+                            <p class="desc line-clamp">Web design basic to higer level</p>
+                            <div class="info">
+                                <span class="label">40 Classes</span>
+                                <span class="label">3 Months</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Item2 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img src="./assets/img/courses-2.jpg" alt="" class="thumb">
+                        </a>
+                        <div class="body">
+                            <h3 class="title line-clamp"><a href="#!">Web Development</a></h3>
+                            <p class="price">Fee <strong>$250</strong></p>
+                            <p class="desc line-clamp">Web development basic to higer level</p>
+                            <div class="info">
+                                <span class="label">30 Classes</span>
+                                <span class="label">3 Months</span>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- Item3 -->
+                     <div class="item">
+                        <a href="#!">
+                            <img src="./assets/img/courses-3.jpg" alt="" class="thumb">
+                        </a>
+                        <div class="body">
+                            <h3 class="title line-clamp"><a href="#!">UI/UX Design</a></h3>
+                            <p class="price">Fee <strong>$350</strong></p>
+                            <p class="desc line-clamp">UI/UX design basic to higer level</p>
+                            <div class="info">
+                                <span class="label">50 Classes</span>
+                                <span class="label">4 Months</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
