--- a/index.html
+++ b/index.html
@@ -198,6 +198,25 @@
                 </div>
             </div>
         </div>
+        <!-- pricing -->
+        <div class="pricing">
+            <div class="main-content">
+                <div class="body">
+                    <div class="sales">
+                        <h1 class="heading lv1">100+</h1>
+                        <p class="desc">Popular Courses</p>
+                    </div>
+                    <div class="sales">
+                        <h1 class="heading lv1">500+</h1>
+                        <p class="desc">Skilled Trainer</p>
+                    </div>
+                    <div class="sales">
+                        <h1 class="heading lv1">1M+</h1>
+                        <p class="desc">Student Learning</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
