--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <main style="height: 5000px;">
+    <main >
         <!-- Hero -->
         <div class="hero">
             <div class="main-content">
@@ -217,6 +217,132 @@
                 </div>
             </div>
         </div>
+        <!-- feedback -->
+        <div class="feadback">
+            <div class="main-content">
+                <div class="body">
+                    <div class="content">
+                        <img src="./assets/icon/open-quote.svg" alt="" class="open-quote">
+                        <blockquote>“They are the best people. And this is the suitable platform to learn from distance.”</blockquote>
+                        <p class="title"><strong>Ben Foakes,</strong> student.</p>
+                        <div class="controls">
+                            <button class="control-btn">
+                                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7 13L1 7L7 1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                            </button>
+                            <button class="control-btn">
+                                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 13L7 7L1 1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <img src="./assets/img/avatar-big.svg" alt="" class="avatar">  
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- contact -->
+        <div class="contact">
+            <div class="main-content">
+                <div class="body">
+                    <div class="start">
+                        <h2 class="heading lv2">Ready to Get Admit</h2>
+                        <p class="desc">Create your account and Boost your Career.</p>
+                    </div>
+                    <div class="active">
+                        <a href="#!" class="btn btn-contact">Get Started</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="main-content">
+            <div class="body">
+                <img src="./assets/img/Logo.svg" alt="" class="logo">
+                <div class="column">
+                    <h3 class="title">Company</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#!">About</a>
+                        </li>
+                        <li>
+                            <a href="#!">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#!">Press</a>
+                        </li>
+                        <li>
+                            <a href="#!"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="title">Community</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#!">Team Plans</a>
+                        </li>
+                        <li>
+                            <a href="#!">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#!">Students</a>
+                        </li>
+                        <li>
+                            <a href="#!">Schoolarships</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="title">Teaching</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#!">Become a teacher</a>
+                        </li>
+                        <li>
+                            <a href="#!">Teaching academy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="title">Be social</h3>
+                    <ul class="list">
+                        <li>
+                            <div class="social">
+                                <img src="./assets/icon/Twitter.svg" alt="" class="icon">
+                                <a href="#!">Twitter</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="social">
+                                <img src="./assets/icon/Facebook.svg" alt="" class="icon">
+                                <a href="#!">Facebook</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="social">
+                                <img src="./assets/icon/Instagram.svg" class="icon">
+                                <a href="#!">Instagram</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="social">
+                                <img src="./assets/icon/Linkedin.svg" alt="" class="icon">
+                                <a href="#!">Linkedin</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copy-right">
+                <p class="desc">© Copyright 2020 by Mayad Ahmed. All right reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
